Configuration adjustments in the first version. Almost ready as clean starting point.

--- a/devtools/conda-envs/development_env.yaml
+++ b/devtools/conda-envs/development_env.yaml
@@ -14,10 +14,13 @@ dependencies:
 - pip
 - pytest-cov
 - codecov
+- jupyterlab
 - sphinx
 - pydata-sphinx-theme
 - sphinxcontrib-bibtex
-- myst-nb
-- sphinx-copybutton
 - sphinx-remove-toctrees
-- jupyterlab
+- sphinx-copybutton
+- sphinx-design
+- sphinx-favicon
+- sphinx-tabs
+- myst-nb
