--- a/.github/workflows/build_and_upload_conda_packages.yaml
+++ b/.github/workflows/build_and_upload_conda_packages.yaml
@@ -8,32 +8,61 @@ on:
 
 jobs:
   conda_deployment_with_new_tag:
-    name: Conda deployment of package to platform ${{ matrix.platform }} with Python ${{ matrix.python-version }}
+    name: Conda deployment of package with Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false  # do not cancel all in-progress jobs if any job variation fails
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        #os: ubuntu-latest #[macOS-latest, ubuntu-latest]
+        python-version: ["3.10", "3.11", "3.12"]
+
     steps:
-      - uses: actions/checkout@v2
+
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Conda environment creation and activation
-        uses: conda-incubator/setup-miniconda@v2
+
+      - name: Additional info about the build
+        shell: bash
+        run: |
+          uname -a
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Setup conda env
+        uses: mamba-org/setup-micromamba@v2
+        with:
           environment-file: devtools/conda-envs/build_env.yaml
-          auto-activate-base: false
-          auto-update-conda: false
-          show-channel-urls: true
+          environment-name: build
+          condarc: |
+            channels:
+              - uibcdf
+              - conda-forge
+            channel_priority: strict
+          create-args: >-
+            python=${{ matrix.python-version }}
+
+      - name: Info conda
+        shell: bash -l {0}
+        run: |
+          micromamba activate build
+          micromamba info
+          micromamba list
+
       - name: Build and upload the conda packages
-        uses: uibcdf/action-build-and-upload-conda-packages@v1.0-beta.2
+        uses: uibcdf/action-build-and-upload-conda-packages@main
         with:
           meta_yaml_dir: devtools/conda-build
-          python-version: ${{ matrix.python-version }}
+          mambabuild: false
+          user: uibcdf
+          label: main
+          conda_build_args: --package-format tar.bz2
           platform_linux-64: true
           platform_osx-64: true
+          platform_osx-arm64: true
           platform_win-64: true
-          user: uibcdf
-          label: auto
-          token: ${{ secrets.ANACONDA_UIBCDF_TOKEN }}
+          token: ${{ secrets.ANACONDA_UIBCDF_TOKEN }} # Replace with the right name of your secret
 
