--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,5 +3,5 @@ include MANIFEST.in
 include CODE_OF_CONDUCT.md
 include versioneer.py
 
-graft pocketmt
+graft topomt
 global-exclude *.py[cod] __pycache__ *.so
