--- a/devtools/conda-build/meta.yaml
+++ b/devtools/conda-build/meta.yaml
@@ -1,5 +1,5 @@
 package:
-  name: pocketmt
+  name: topomt
   version: "{{ environ['GIT_DESCRIBE_TAG'] }}"
 source:
   path: ../../
@@ -25,5 +25,5 @@ about:
   description: 'This library...
 
     '
-  dev_url: https://github.com/uibcdf/pocketmt
-  doc_url: https://uibcdf.org/pocketmt
+  dev_url: https://github.com/uibcdf/topomt
+  doc_url: https://uibcdf.org/topomt
