Required packages correction. New file to manage conda envs (conda_env_manager.py). Documentation with feature hierarchy included in user doc.

--- a/devtools/conda-envs/development_env.yaml
+++ b/devtools/conda-envs/development_env.yaml
@@ -1,20 +1,22 @@
 channels:
 - uibcdf
 - conda-forge
-- defaults
 dependencies:
 - python
-- setuptools
-- numpy
+- pip
+- setuptools >=61.0
+- versioningit ~=2.0
+- molsysmt
 - pyunitwizard
 - scipy
 - nglview
-- molsysmt
 - pytest
-- pip
 - pytest-cov
+- pytest-xdist
 - codecov
 - jupyterlab
+- plantuml
+- graphviz
 - sphinx
 - pydata-sphinx-theme
 - sphinxcontrib-bibtex
@@ -23,4 +25,6 @@ dependencies:
 - sphinx-design
 - sphinx-favicon
 - sphinx-tabs
+- sphinxcontrib-plantuml
 - myst-nb
+- mamba
