--- a/devtools/conda-build/meta.yaml
+++ b/devtools/conda-build/meta.yaml
@@ -8,16 +8,18 @@ build:
 requirements:
   build:
   - python
-  - setuptools
-  - numpy
+  - pip
+  - setuptools >=61.0
+  - versioningit ~=2.0
   run:
   - python
-  - setuptools
-  - numpy
+  - pip
+  - setuptools >=61.0
+  - versioningit ~=2.0
+  - molsysmt
   - pyunitwizard
   - scipy
   - nglview
-  - molsysmt
 about:
   home: https://uibcdf.org
   license: MIT License
