--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -1,16 +1,16 @@
 channels:
 - uibcdf
 - conda-forge
-- defaults
 dependencies:
 - python
-- setuptools
-- numpy
+- pip
+- setuptools >=61.0
+- versioningit ~=2.0
+- molsysmt
 - pyunitwizard
 - scipy
 - nglview
-- molsysmt
 - pytest
-- pip
 - pytest-cov
+- pytest-xdist
 - codecov
