--- a/devtools/requirements.yaml
+++ b/devtools/requirements.yaml
@@ -34,6 +34,8 @@ docs:
   dependencies: &docs_dependencies
     - *production_dependencies
     - jupyterlab
+    - plantuml
+    - graphviz
     - sphinx
     - pydata-sphinx-theme
     - sphinxcontrib-bibtex
@@ -42,6 +44,7 @@ docs:
     - sphinx-design
     - sphinx-favicon
     - sphinx-tabs
+    - sphinxcontrib-plantuml
     - myst-nb
 
 development:
